# meso-dtfa

./: LICENSE  README.md  pyproject.toml  setup.py
meso_dtfa/: core.py  loss.py  plot.py
meso_dtfa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: grad_descent.py  grad_descent_ripple.py  grad_field.py  grad_field_ripple.py
scripts/ripples/: grad_field.py
