[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meso-dtfa"
version = "0.0.1"
authors = [
  { name="Cyrus Vahidi", email="c.vahidi@qmul.ac.uk" },
]
description = " Mesostructures: Beyond Spectrogram Loss in Differentiable Time--Frequency Analysis (Meso-DTFA)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy == 1.23.5",
    "torch == 1.10.0",
    "scipy == 1.9.3",
    "librosa == 0.9.2"
]

[project.urls]
"Homepage" = "https://github.com/cyrusvahidi/meso-dtfa"
"Bug Tracker" = "https://github.com/cyrusvahidi/meso-dtfa/issues"